# jb-ent

./: .clang-tidy  .editorconfig  .gitattributes  .gitignore  .jbentignore  BRANCH_README.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.cbm  OTHER_LICENSES.md  README.md  TESTING.md  build.rs  gemini.md  package-lock.json  run_fqn.c  run_test_graph_buffer.c  run_test_mem_context.c  vcpkg.json
.cargo/: config.toml.example
.github/workflows/: dry-run.yml  release.yml
docs/plans/: 2026-04-16-jb-ent-migration.md  2026-04-17-jb-ent-cli-plan.md  2026-04-23-jb-registry-openssl-abstraction-plan.md  jb-ent-completeness-checklist.md
docs/specs/: 2026-04-16-jb-ent-design.md  2026-04-17-jb-ent-cli-design.md  2026-04-23-jb-registry-crypto-design.md  coding-guidelines.md
graph-ui/: package-lock.json
internal/cbm/: ac.c  ac.h  arena.c  arena.h  cbm.c  cbm.h  extract_defs.c  helpers.c  sqlite_writer.c
internal/cbm/lsp/: c_lsp.c
jb-identity/: Cargo.toml  jb-identity-v0.9-specification.md
jb-identity/src/: git.rs  lib.rs  local.rs
jb-identity/tests/: git_tests.rs  local_tests.rs  lock_tests.rs  main.rs  resolve_tests.rs
jb-registry/: Cargo.toml  test_rand.rs
jb-registry/src/: crypto.rs  error.rs  ffi_openssl.rs  lib.rs  schema.rs
jb-registry/src/storage/: error.rs  mod.rs
jb-registry/tests/: crypto_tests.rs  ffi_openssl_tests.rs  test_cng_scratch.rs  test_pqc_windows.rs
scripts/: embed-frontend.sh
src/: lib.rs  main.c  main.rs
src-c/: .gitignore  CMakeLists.txt  Makefile.cbm  THIRD_PARTY.md  main.c  run_fqn.c  run_test_edge_set.c  run_test_graph_buffer.c  run_test_int_hash_table.c  run_test_mem_context.c
src-c/discover/: gitignore.c
src-c/docs/plans/: 2026-04-14-memory-optimization-design.md  2026-04-14-memory-optimization-plan.md  2026-04-14-unified-memory-and-parallel-discovery.md
src-c/foundation/: allocator.h  allocator_tracker.h  arena.c  compat_fs.c  constants.h  diagnostics.c  edge_set.c  int_hash_table.c  mem.c  mem_context.h  slab_alloc.c  slab_alloc.h  str_intern.c  vmem.c  yaml.c
src-c/internal/cbm/: ac.c  arena.c  cbm.c  extract_unified.c  extract_unified.h  extract_usages.c  preprocessor.cpp  sqlite_writer.c
src-c/internal/cbm/lsp/: c_lsp.c  scope.h
src-c/pipeline/: pass_calls.c  pass_configlink.c  pass_configures.c  pass_definitions.c  pass_envscan.c  pass_githistory.c  pass_k8s.c  pass_parallel.c  pass_semantic.c  pass_semantic_edges.c  pass_tests.c  pass_usages.c  pipeline_incremental.c  pipeline_internal.h
src-c/scripts/: vendor-all-grammars.sh  vendor-grammar.sh
src-c/simhash/: minhash.c
src-c/store/: store.c
src-c/tests/: CMakeLists.txt  run_roundtrip_proof.c  run_test_parse_lean.c  test_cli.c  test_cypher.c  test_edge_set.c  test_env_budget.ps1  test_extraction.c  test_fqn.c  test_framework.h  test_graph_buffer.c  test_incremental.c  test_int_hash_table.c  test_integration.c  test_main.c  test_mcp.c  test_mldsa_full.c  test_oom_circuit_breaker.ps1  test_openssl_version.c  test_parallel.c  test_pipeline.c  test_store_bulk.c  test_watcher.c
src-c/tools/: bin2c.c
src-c/ui/: config.c  http_server.c
src-c/watcher/: watcher.c
src/bridge/: mod.rs
src/cli/: cli.c  mod.rs
src/config/: mod.rs
src/cypher/: cypher.c
src/discover/: discover.c  discover.h  discover_optimized.c  gitignore.c  language.c  userconfig.c
src/foundation/: allocator.h  arena.c  arena.h  compat.c  compat.h  compat_fs.c  compat_fs.h  compat_regex.c  compat_regex.h  compat_thread.c  diagnostics.c  dyn_array.h  edge_set.h  hash_table.c  int_hash_table.h  log.c  mem.c  mem.h  mem_context.c  platform.c  platform.h  slab_alloc.c  slab_alloc.h  str_intern.c  system_info.c  yaml.c
src/graph_buffer/: graph_buffer.c  graph_buffer.h
src/identity/: Cargo.toml  git.rs  jb-identity-v0.9.1-specification.md  lib.rs  mod.rs
src/mcp/: mcp.c  mcp.h  mod.rs
src/pipeline/: fqn.c  httplink.c  httplink.h  pass_calls.c  pass_compile_commands.c  pass_configlink.c  pass_definitions.c  pass_enrichment.c  pass_envscan.c  pass_gitdiff.c  pass_githistory.c  pass_httplinks.c  pass_infrascan.c  pass_k8s.c  pass_parallel.c  pass_semantic.c  pass_semantic_edges.c  pass_similarity.c  pass_tests.c  pass_usages.c  pipeline.c  pipeline.h  pipeline_internal.h  registry.c  worker_pool.c
src/registry/: Cargo.toml  crypto.rs  lib.rs  schema.rs
src/registry/storage/: file_provider.rs
src/semantic/: semantic.c
src/store/: store.c
src/traces/: traces.c
src/ui/: config.c  embedded_assets.c  http_server.c  layout3d.c  layout3d.h
src/watcher/: watcher.c
tests/: CMakeLists.txt  cli_tests.rs  test_ac.c  test_arena.c  test_c_lsp.c  test_configlink.c  test_extraction.c  test_fqn.c  test_graph_buffer.c  test_lz4.c  test_main.c  test_mcp.c  test_mem.c  test_mem_context.c  test_registry.c  test_store_arch.c  test_store_search.c  test_ui.c
tests/identity/: error_tests.rs  git_tests.rs  local_tests.rs
tests/registry/: crypto_tests.rs  pem_tests.rs  storage_tests.rs
