[package]
name = "jb-ent"
version = "0.1.0"
edition = "2024"
authors = ["Jacek Błaszczyński <jacek.blaszczynski@outlook.com>"]
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.20"
tokio = { version = "1.0", features = ["full"] }
tower-lsp = "0.20"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.10"
libc = "0.2"
cc = "1.0"
mcp-rust-sdk = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "020a38b6ad3d0f26487c464250a484fad2a06b0e" }
