[workspace]
members = [
    ".",
    "jb-identity",
    "jb-registry"
]

[package]
name = "jb-ent"
version = "0.1.0"
edition = "2024"
authors = ["Jacek Błaszczyński <jacek.blaszczynski@outlook.com>"]
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
git2 = "0.20"
tokio = { version = "1.52.0", features = ["full"] }
tower-lsp = "0.20"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.10"
libc = "0.2"
cc = "1.0"
rmcp = { version = "1.5.0", features = ["server"] }

[dev-dependencies]
tempfile = "3.27.0"
flate2 = "1.0.35"
jb-identity = { path = "jb-identity" }
jb-registry = { path = "jb-registry" }
