[package]
name = "jb-identity"
version = "0.1.0"
edition = "2024"
authors = ["Jacek Błaszczyński <jacek.blaszczynski@outlook.com>"]
license = "AGPL-3.0-only"
description = "A deterministic project identity resolution library"

[dependencies]
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
