[package]
name = "jb-registry"
version = "0.1.0"
edition = "2024"
authors = ["Jacek Błaszczyński <jacek.blaszczynski@outlook.com>"]
license = "AGPL-3.0-only"
description = "Global project registry and multi-environment synchronization"

[lib]
path = "lib.rs"

[dependencies]
jb-identity = { path = "../identity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.10.1", features = ["thread_rng", "std_rng"] }
anyhow = "1.0"
base64 = "0.22.1"
rand_core = "0.10.1"
thiserror = "2.0.18"
pkcs8 = { version = "0.10.2", features = ["pem"] }
openssl = { version = "0.10.76", features = ["v110"] }
openssl-sys = "0.9.114"
foreign-types-shared = "0.1.1"
zeroize = "1.8.2"
pem-rfc7468 = { version = "1.0.0", features = ["alloc"] }

[dev-dependencies]
tempfile = "3.27.0"
flate2 = "1.0.35"

[[test]]
name = "crypto_tests"
path = "../../tests/registry/crypto_tests.rs"

[[test]]
name = "ffi_openssl_tests"
path = "../../tests/registry/ffi_openssl_tests.rs"

[[test]]
name = "pem_tests"
path = "../../tests/registry/pem_tests.rs"

[[test]]
name = "storage_tests"
path = "../../tests/registry/storage_tests.rs"
